JavaScript overhaul:  - Fixed existing collapse/expand button for code files  - Added new shrink/expand button to comment form

--- a/src/github-inject.less
+++ b/src/github-inject.less
@@ -109,6 +109,10 @@
             &.commit-comment {
                 .width(444px);
             }
+
+            &.shrinked-to-default {
+                max-width: 780px !important;
+            }
         }
 
         & .discussion-timeline, & .merge-pr {
